scrollbar fix

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -83,10 +83,6 @@
     background: var(--primary-color);
 }
 
-html {
-    overflow-x: hidden;
-}
-
 /* Body and Main Layout */
 body {
     background-color: var(--background-color);
@@ -95,6 +91,7 @@ body {
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 body::before {
@@ -107,6 +104,10 @@ body::before {
     background: radial-gradient(circle at 50% 50%, rgba(252, 66, 66, 0.03) 0%, transparent 70%);
     pointer-events: none;
     z-index: -1;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 main {
